--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,31 @@
     <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.jpg">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
     <script src="{{site.baseurl}}/assets/js/calculate_reading_time.js"></script>
+
+    <!-- Hotjar Tracking Code for Site 3908995 (name missing) -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:3908995,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+    
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WJJCJPXX0M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WJJCJPXX0M');
+</script>
+    
 <body>
     <nav class="navbar">
         <ul class="navbar-nav me-auto">
