--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,20 +7,42 @@
     </a>
   </footer>
 
-  <script>
-    function copy() {
-      var copyText = document.getElementById("emailCopy").innerText;
-      navigator.clipboard.writeText(copyText);
+    <script>
+        function copy() {
+          var copyText = document.getElementById("emailCopy").innerText;
+          navigator.clipboard.writeText(copyText);
+    
+          var tooltip = document.getElementById("tooltip");
+          tooltip.innerHTML = "Copied";
+          tooltip.style.display = "block";
+          setTimeout(
+            function () {
+              tooltip.style.display = "none";
+            }, 2000)
+        }
+    </script>
 
-      var tooltip = document.getElementById("tooltip");
-      tooltip.innerHTML = "Copied";
-      tooltip.style.display = "block";
-      setTimeout(
-        function () {
-          tooltip.style.display = "none";
-        }, 2000)
-    }
-  </script>
+    {% if jekyll.environment != "development" %}
+        <!-- Hotjar Tracking Code -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:3908995,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJJCJPXX0M"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());   
+          gtag('config', 'G-WJJCJPXX0M');
+        </script>
+    {% endif %}
 </body>
 </html>
