--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,6 +23,8 @@
     </script>
 
     {% if jekyll.environment != "development" %}
+    <!-- Insert Google Analytics and Hotjar tracking code -->
+
         <!-- Hotjar Tracking Code -->
         <script>
             (function(h,o,t,j,a,r){
