--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -35,8 +35,8 @@
         <div class="post-stats">
             {% assign formattedDate = page.date | date: "%d %b %Y" | upcase %}
             <span>{{formattedDate}}</span>
-            <span class="readingTime"></span>
-            <span>{{readingTime}}READ</span>
+            <!-- <span class="readingTime"></span> -->
+            <!-- <span>{{readingTime}}READ</span> -->
             <span class="post_type">{{page.tag}}</span>
         </div>
         <h1>{{page.title}}</h1>
@@ -44,7 +44,7 @@
         <p>{{page.content}}</p>
     </div>
 
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function() {
           const postElements = document.querySelectorAll('#singlePost');
       
@@ -62,7 +62,7 @@
             }
           });
         });
-      </script>
+      </script> -->
 
     {% include footer.html %}
 {% endif %}
