--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <title>Anna Kozh - {{page.title}}</title>
     <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.jpg">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
-    <!-- <script src="{{site.baseurl}}/assets/js/calculate_reading_time.js"></script> -->
+    <script src="{{site.baseurl}}/assets/js/calculate_reading_time.js"></script>
 </head>
 <body>
     <nav class="navbar">
