--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,7 +37,8 @@ body {
   flex-direction: column;
   background-color: var(--white);
   background: url(../images/pattern.png) repeat;
-  font-family: var(--primary-font), sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+  font-family: system-ui;
   color: var(--primary-text-color);
   background-size: 22rem;
   margin: 0 auto;
