--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Kozh - {{page.title}}</title>
     <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.jpg">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="navbar-nav">
+    <nav class="nav">
+        <li class="nav-item">
+            <img class="logo" src="{{site.baseurl}}/assets/images/favicon.jpg" alt="">
+            <a aria-current="page" href="/">Anna Kozh</a>
+        </li>
+        <div class="nav_links">
             <li class="nav-item">
-                <img class="logo" src="{{site.baseurl}}/assets/images/favicon.jpg" alt="">
-                <a aria-current="page" href="/">Anna Kozh</a>
+                <a aria-current="page" href="{{site.baseurl}}/">Portfolio</a>
             </li>
-            <div class="nav_links">
-                <li class="nav-item">
-                    <a aria-current="page" href="{{site.baseurl}}/">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
-                </li>
-                <li class="nav-item icon download"
-                    style="background: url({{site.baseurl}}/assets/images/cloud-arrow-down-solid.svg) no-repeat;background-size:1rem;background-position-y:center;">
-                    <a class="resume-placeholder " href="">
-                        R&#233sum&#233</a>
-                </li>
-            </div>
-        </ul>
+            <li class="nav-item">
+                <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
+            </li>
+            <li class="nav-item icon download"
+                style="background: url({{site.baseurl}}/assets/images/cloud-arrow-down-solid.svg) no-repeat;background-size:1rem;background-position-y:center;">
+                <a class="resume-placeholder " href="">
+                    R&#233sum&#233</a>
+            </li>
+        </div>
     </nav>
