--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,10 @@ html {
 }
 
 body {
+  gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
@@ -509,17 +513,17 @@ footer > * {
 }
 
 /* MEDIA QUERIES */
-@media screen and (min-width: 1408px) {
+@media only screen and (min-width: 1408px) {
  
 }
 
-@media screen and (max-width: 728px) {
+@media only screen and (max-width: 728px) and (min-width: 531px) {
   .nav {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
 }
-@media screen and (max-width: 530px) {
+@media only screen and (max-width: 530px) and (min-width: 336px){
   .nav {
     flex-direction: column !important;
     padding: 2rem 1.5rem 1.5rem;
@@ -527,7 +531,7 @@ footer > * {
   }
 }
 
-@media screen and (max-width: 335px) {
+@media only screen and (max-width: 335px) {
   .nav_links {
     justify-content: space-evenly;
     gap: inherit;
