remove extra padding on content side

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,22 +9,24 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
 <body>
-    <nav class="nav">
-        <li class="nav-item">
-            <img class="logo" src="{{site.baseurl}}/assets/images/favicon.jpg" alt="">
-            <a aria-current="page" href="/">Anna Kozh</a>
-        </li>
-        <div class="nav_links">
+    <div class="navbar">
+        <nav class="nav">
             <li class="nav-item">
-                <a aria-current="page" href="{{site.baseurl}}/">Portfolio</a>
+                <img class="logo" src="{{site.baseurl}}/assets/images/favicon.jpg" alt="">
+                <a aria-current="page" href="/">Anna Kozh</a>
             </li>
-            <li class="nav-item">
-                <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
-            </li>
-            <li class="nav-item icon download"
-                style="background: url({{site.baseurl}}/assets/images/cloud-arrow-down-solid.svg) no-repeat;background-size:1rem;background-position-y:center;">
-                <a class="resume-placeholder " href="">
-                    R&#233sum&#233</a>
-            </li>
-        </div>
-    </nav>
+            <div class="nav_links">
+                <li class="nav-item">
+                    <a aria-current="page" href="{{site.baseurl}}/">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
+                </li>
+                <li class="nav-item icon download"
+                    style="background: url({{site.baseurl}}/assets/images/cloud-arrow-down-solid.svg) no-repeat;background-size:1rem;background-position-y:center;">
+                    <a class="resume-placeholder " href="">
+                        R&#233sum&#233</a>
+                </li>
+            </div>
+        </nav>
+    </div>
