--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,9 +9,8 @@
   src: url("../fonts/Inter-Bold.ttf");
   font-weight: 700;
   font-display: swap;
-} */
+}
 
-/*
 @font-face {
   font-family: "Inter";
   src: url("../fonts/Inter-Medium.ttf");
@@ -39,7 +38,6 @@ html {
 }
 
 body {
-  gap: 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -110,7 +108,7 @@ p {
   margin: 0;
   /* color: var(--secondary-text-color); */
   text-align: justify;
-  font-weight: 100;
+  /* font-weight: 500; */
   font-size: 1.4rem;
   line-height: 2rem;
 }
@@ -154,18 +152,20 @@ strong {
 }
 
 .navbar {
-  margin-bottom: 3rem;
-  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   z-index: 9;
 }
 
 .nav {
   display: flex;
-  flex-direction: row !important;
+  flex-direction: row;
+  width: 100%;
   list-style: none;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 3rem 2rem;
-  justify-content: space-between;
+  justify-content: space-evenly;
   max-width: 1312px;
 }
 
@@ -431,7 +431,7 @@ span {
 
 #pastExperiences {
   max-width: 679px;
-  margin: 0 1.5rem;
+  margin: 0 24px;
   width: 100%;
 }
 
