--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
 <footer>
+  <div class="footer-content">
     <h3>Get in touch</h3>
     <a href="https://www.linkedin.com/in/anna-kozhevnikova/" target="_blank">LinkedIn</a>
     <a id="emailCopy" onclick="copy()">
       <span class="tooltiptext" id="tooltip"></span>
       hi@annakozh.com
     </a>
-  </footer>
+  </div>
+</footer>
 
   <script>
     window.addEventListener("load", function() {
