--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
     <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.jpg">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
