ann made me do it

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
-    <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.jpg">
+    <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
 <body>
     <div class="navbar">
-        <nav class="nav">
-            <li class="nav-item">
-                <img class="logo" src="{{site.baseurl}}/assets/images/favicon.jpg" alt="">
-                <a aria-current="page" href="/">Anna Kozh</a>
+        <menu class="nav">
+            <li class="nav-item logo">
+                <a aria-current="page" href="/">
+                    <img src="{{site.baseurl}}/assets/images/logo.svg" alt="">
+                </a>
             </li>
             <div class="nav_links">
                 <li class="nav-item">
@@ -29,5 +30,5 @@
                         R&#233sum&#233</a>
                 </li>
             </div>
-        </nav>
+        </menu>
     </div>
