--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/Inter-Black.ttf");
-  font-weight: 900;
-}
-
 :root {
   --primary-color: #F11CDC;
   --secondary-color: #EEEEEE;
@@ -12,7 +6,7 @@
   --scroll-track: #00000016;
   --white: #fff;
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-  --primary-font: "Inter";
+  --primary-font: system-ui, sans-serif;
 }
 
 *, *:before, *:after {
@@ -35,10 +29,11 @@ body {
   position: relative;
   min-height: 100vh;
   background-color: var(--white);
-  background: url(../images/pattern.png) repeat;
+  background: url(../images/pattern.webp) repeat;
   font-family: system-ui;
   color: var(--primary-text-color);
-  background-size: 22rem;
+  background-size: 60px;
+  background-color: #00000003;
 }
 
 /* width */
@@ -62,7 +57,7 @@ body {
 }
 
 h1, h2, h3, h5 {
-  font-family: var(--primary-font), sans-serif;
+  font-family: var(--primary-font);
   margin: 2rem 0;
   font-weight: 900;
 }
@@ -78,13 +73,13 @@ h2 {
 
 h3 {
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 2rem;
 }
 
 h4 {
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 2rem;
   border-left: 2px solid var(--primary-color);
   padding-left: 2rem;
@@ -191,9 +186,7 @@ a:hover {
 }
 
 .logo {
-  border-radius: 50%;
-  height: 2rem;
-  color: var(--primary-color);
+  line-height: 0px;
 }
 
 #content {
@@ -421,7 +414,7 @@ span {
 .xpLogo {
   height: fit-content;
   object-fit: contain;
-  width: 10rem;
+  width: 130px;
   /* filter: grayscale(0) contrast(1) saturate(0); */
 }
 
@@ -446,6 +439,10 @@ span {
 
 .xpLink li {
   margin-bottom: 1rem !important;
+}
+
+.more {
+  /* float: right; */
 }
 
 footer {
