--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
-    <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon.png">
+    <link rel="icon" sizes="152x152" type="image/png" href="{{site.baseurl}}/assets/images/favicon.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
 <body>
