remove old files; fix padding, margins and gaps; fix footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
-    <link rel="icon" sizes="152x152" type="image/png" href="{{site.baseurl}}/assets/images/favicon.png">
+    <link rel="icon" sizes="152x152" type="image/png" href="{{site.baseurl}}/assets/images/favicon152x152.png">
+    <link rel="icon" sizes="32x32" type="image/png" href="{{site.baseurl}}/assets/images/favicon32x32.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
                     <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
                 </li>
                 <li class="nav-item icon download"
-                    style="background: url({{site.baseurl}}/assets/images/cloud-arrow-down-solid.svg) no-repeat;background-size:1rem;background-position-y:center;">
+                    style="background: url({{site.baseurl}}/assets/images/download.png) no-repeat;background-size:1rem;background-position:0px 12px;">
                     <a class="resume-placeholder " href="">
                         R&#233sum&#233</a>
                 </li>
