fix nav and nav icon position

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,8 +25,7 @@
                 <li class="nav-item">
                     <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
                 </li>
-                <li class="nav-item icon download"
-                    style="background: url({{site.baseurl}}/assets/images/download.png) no-repeat;background-size:1rem;background-position:0px 12px;">
+                <li class="nav-item icon download">
                     <a class="resume-placeholder " href="">
                         R&#233sum&#233</a>
                 </li>
