--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <menu class="nav">
             <li class="nav-item logo">
                 <a aria-current="page" href="/">
-                    <img src="{{site.baseurl}}/assets/images/logo.svg" alt="">
+                    <img src="{{site.baseurl}}/assets/images/logo.svg" alt="Anna kozh logo">
                 </a>
             </li>
             <div class="nav_links">
@@ -26,7 +26,7 @@
                     <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
                 </li>
                 <li class="nav-item icon download">
-                    <a class="resume-placeholder " href="">
+                    <a class="resume-placeholder " href="" alt="Download resume">
                         R&#233sum&#233</a>
                 </li>
             </div>
