--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -7,8 +7,7 @@
         <div class="post-stats">
             {% assign formattedDate = page.date | date: "%d %b %Y" | upcase %}
             <span>{{formattedDate}}</span>
-            <span>{{page.time}}</span>
-            <!-- <span>{{readingTime}}READ</span> -->
+            <span>{{page.time}}READ</span>
             <span class="post_type">{{page.tag}}</span>
         </div>
         <h1>{{page.title}}</h1>
@@ -28,7 +27,7 @@
             if (maxScroll > 0) {
                 scrollProgress = (scrollPosition / maxScroll) * 100;
             } else {
-                scrollProgress = 100; // Set to 100% if there is no scrolling possible
+                scrollProgress = 100;
             }
 
             // Update the loader bar width based on scroll progress
