--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
 {% if site.is_under_construction %}
-  {% include under-construction.html %}
+  {% if site.is_local %}
+    {% include header.html %}
+    <div id="content">{{ content }}</div>
+    {% include footer.html %}
+  {% else %}
+    {% include under-construction.html %}
+  {% endif %}
 {% else %}
   {% include header.html %}
-
   <div id="content">{{ content }}</div>
-  
   {% include footer.html %}
 {% endif %}
