add analytics to header and UC

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
     <link rel="icon" sizes="32x32" type="image/png" href="{{site.baseurl}}/assets/images/favicon32x32.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
+{% include analytics.html %}
 <body>
     <div class="navbar">
         <menu class="nav">
