change background image, styling for full width section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
 </head>
 {% include analytics.html %}
 <body>
+    <div id="container">
     <div class="navbar">
         <menu class="nav">
             <li class="nav-item logo">
