--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -11,7 +11,7 @@
             <span class="post_type">{{page.tag}}</span>
         </div>
         <h1>{{page.title}}</h1>
-        <h4>{{page.description}}</h4>
+        <p class="description">{{page.description}}</p>
         <p>{{page.content}}</p>
     </div>
     <script>
